--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,14 @@
 name: ethereum_address
 description: Ethereum Address library for Dart
-version: 0.0.1
+version: 1.0.0
 homepage: https://github.com/petejkim/dart-ethereum_address
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
+  convert: ^2.1.1
+  pointycastle: ^1.0.2
 
 dev_dependencies:
   test: ^1.9.4
