--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,11 @@ version: 1.0.1
 homepage: https://github.com/petejkim/dart-ethereum_address
 
 environment:
-  sdk: '>=2.0.0 <3.0.0'
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
-  convert: ^2.1.1
-  pointycastle: ^1.0.2
+  convert: ^3.0.0
+  pointycastle: ^2.0.1
 
 dev_dependencies:
   test: ^1.9.4
