--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
-name: ethereum_address
+name: ethereum_addresses
 description: A dart library to generate, checksum, and validate Ethereum addresses
-version: 1.0.1
-homepage: https://github.com/petejkim/dart-ethereum_address
+version: 1.0.2
+repository: https://github.com/fuseio/dart-ethereum_address
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
-  convert: ^3.0.0
-  pointycastle: ^3.0.1
+  convert: ^3.0.1
+  pointycastle: ^3.4.0
 
 dev_dependencies:
-  test: ^1.9.4
+  test: ^1.19.5
